lc data till may 27

--- a/ashwood.ipynb
+++ b/ashwood.ipynb
@@ -19,15 +19,15 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\retai\\AppData\\Local\\Temp\\ipykernel_15028\\3608439249.py:1: DtypeWarning: Columns (12) have mixed types. Specify dtype option on import or set low_memory=False.\n",
-      "  df = pd.read_csv('debs orders.csv', sep=';')\n",
-      "C:\\Users\\retai\\AppData\\Local\\Temp\\ipykernel_15028\\3608439249.py:11: UserWarning: Parsing dates in %d/%m/%Y format when dayfirst=False (the default) was specified. Pass `dayfirst=True` or specify a format to silence this warning.\n",
+      "C:\\Users\\retai\\AppData\\Local\\Temp\\ipykernel_8696\\206966295.py:1: DtypeWarning: Columns (12) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "  df = pd.read_csv('debenhams orders 10 may.csv', sep=';')\n",
+      "C:\\Users\\retai\\AppData\\Local\\Temp\\ipykernel_8696\\206966295.py:11: UserWarning: Parsing dates in %d/%m/%Y format when dayfirst=False (the default) was specified. Pass `dayfirst=True` or specify a format to silence this warning.\n",
       "  df['date'] = pd.to_datetime(df['date'])\n"
      ]
     }
    ],
    "source": [
-    "df = pd.read_csv('debs orders.csv', sep=';')\n",
+    "df = pd.read_csv('debenhams orders 10 may.csv', sep=';')\n",
     "temp2_df = df['Date created'].str.split('-', expand=True)\n",
     "temp2_df.columns = ['f_', 's_']\n",
     "temp2_df['f_'] = temp2_df['f_'].str.replace('...', '')\n",
@@ -63,7 +63,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_orig = pd.read_csv('2024_apr30_orders fixed_categories.csv')\n",
+    "df_orig = pd.read_csv('2024_may27_orders fixed_categories.csv')\n",
     "df_orig['Channel'] = 'Leather Company'"
    ]
   },
@@ -161,16 +161,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "title:  1449\n",
-      "line:  7284\n",
-      "model:  1449\n",
-      "manufacturer_name:  7284\n",
-      "attribute_summary:  1449\n",
-      "colour:  7364\n",
-      "F_Cat:  7659\n",
-      "S_Cat:  7669\n",
-      "T_Cat:  22201\n",
-      "Category:  7669\n"
+      "title:  1459\n",
+      "line:  5760\n",
+      "model:  1459\n",
+      "manufacturer_name:  5760\n",
+      "attribute_summary:  1459\n",
+      "colour:  6034\n",
+      "F_Cat:  6355\n",
+      "S_Cat:  6366\n",
+      "T_Cat:  22904\n",
+      "Category:  6366\n"
      ]
     }
    ],
@@ -187,7 +187,7 @@
     {
      "data": {
       "text/plain": [
-       "(22427, 80)"
+       "(23137, 80)"
       ]
      },
      "execution_count": 9,
@@ -207,7 +207,7 @@
     {
      "data": {
       "text/plain": [
-       "((3645, 80), (18782, 80))"
+       "((3727, 80), (19410, 80))"
       ]
      },
      "execution_count": 10,
@@ -230,7 +230,7 @@
      "text": [
       "<>:9: SyntaxWarning: invalid escape sequence '\\('\n",
       "<>:9: SyntaxWarning: invalid escape sequence '\\('\n",
-      "C:\\Users\\retai\\AppData\\Local\\Temp\\ipykernel_15028\\2937461329.py:9: SyntaxWarning: invalid escape sequence '\\('\n",
+      "C:\\Users\\retai\\AppData\\Local\\Temp\\ipykernel_8696\\2937461329.py:9: SyntaxWarning: invalid escape sequence '\\('\n",
       "  temp_stock_df = temp_df['title'].str.split('\\(|\\)', expand=True).iloc[:,[0,1]]\n"
      ]
     }
@@ -461,13 +461,13 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\retai\\AppData\\Local\\Temp\\ipykernel_15028\\4122981288.py:11: SettingWithCopyWarning: \n",
+      "C:\\Users\\retai\\AppData\\Local\\Temp\\ipykernel_8696\\4122981288.py:11: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  df_null['customs_description'] = df_null['model']\n",
-      "C:\\Users\\retai\\AppData\\Local\\Temp\\ipykernel_15028\\4122981288.py:12: SettingWithCopyWarning: \n",
+      "C:\\Users\\retai\\AppData\\Local\\Temp\\ipykernel_8696\\4122981288.py:12: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -526,17 +526,17 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "title:  1449\n",
-      "line:  7284\n",
-      "model:  1449\n",
-      "manufacturer_name:  7284\n",
-      "attribute_summary:  1449\n",
-      "colour:  7364\n",
-      "F_Cat:  1449\n",
-      "S_Cat:  2077\n",
-      "T_Cat:  22008\n",
-      "Category:  2077\n",
-      "customs_description:  1449\n"
+      "title:  1459\n",
+      "line:  5760\n",
+      "model:  1459\n",
+      "manufacturer_name:  5760\n",
+      "attribute_summary:  1459\n",
+      "colour:  6034\n",
+      "F_Cat:  1459\n",
+      "S_Cat:  2092\n",
+      "T_Cat:  22668\n",
+      "Category:  2092\n",
+      "customs_description:  1459\n"
      ]
     }
    ],
@@ -714,27 +714,6 @@
    "source": [
     "df.to_csv('All orders.csv', index=False)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
