--- a/product_category_temp.ipynb
+++ b/product_category_temp.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -21,7 +21,7 @@
      "text": [
       "<>:16: SyntaxWarning: invalid escape sequence '\\('\n",
       "<>:16: SyntaxWarning: invalid escape sequence '\\('\n",
-      "C:\\Users\\retai\\AppData\\Local\\Temp\\ipykernel_7720\\702489313.py:16: SyntaxWarning: invalid escape sequence '\\('\n",
+      "C:\\Users\\retai\\AppData\\Local\\Temp\\ipykernel_7376\\3364396161.py:16: SyntaxWarning: invalid escape sequence '\\('\n",
       "  temp_stock_df = temp_df['title_cat'].str.split('\\(Size:', expand=True)\n"
      ]
     },
@@ -29,12 +29,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(60960, 23)\n"
+      "(61699, 23)\n"
      ]
     }
    ],
    "source": [
-    "df1 = pd.read_csv('2024_apr30_orders.csv')\n",
+    "df1 = pd.read_csv('2024_may27_orders.csv')\n",
     "df1['title'] = df1['title'].str.lstrip()\n",
     "df1['title'] = df1['title'].str.rstrip()\n",
     "df1['title_lower'] = df1['title'].str.lower()\n",
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -69,16 +69,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(60960, 25)"
+       "(61699, 25)"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -92,15 +92,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "14936\n",
-      "1258\n"
+      "15115\n",
+      "1287\n"
      ]
     }
    ],
@@ -113,28 +113,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "customs_description\n",
-       "Mens > Leather Jackets > Biker Styles       4399\n",
-       "Ladies > Leather Jackets > Biker Styles     3692\n",
-       "Ladies > Handbags                           2871\n",
-       "January Sale 2021                           2856\n",
-       "Ladies > Deals for HER > Handbags           2707\n",
+       "Mens > Leather Jackets > Biker Styles       4446\n",
+       "Ladies > Leather Jackets > Biker Styles     3738\n",
+       "January Sale 2021                           2882\n",
+       "Ladies > Handbags                           2877\n",
+       "Ladies > Deals for HER > Handbags           2724\n",
        "                                            ... \n",
-       "Handbags > Saddle Bag                          2\n",
        "Valetine's Deals 2024                          2\n",
-       "Ladies                                         2\n",
        "Valentine's Day 2023                           1\n",
+       "Home & Living > Leather Trays                  1\n",
+       "Ladies > Leather Jackets > Bomber Styles       1\n",
        "Home & Living > Leather Magazine Baskets       1\n",
-       "Name: count, Length: 138, dtype: int64"
+       "Name: count, Length: 140, dtype: int64"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -145,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -163,7 +163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -176,16 +176,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df1.to_csv('2024_apr30_orders fixed_categories.csv')"
+    "df1.to_csv('2024_may27_orders fixed_categories.csv')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -236,7 +236,7 @@
        "8476  Ladies > Leather Handbags  "
       ]
      },
-     "execution_count": 10,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -254,22 +254,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(60960, 22)"
+       "(61699, 22)"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df1 = pd.read_csv('2024_apr30_orders.csv')\n",
+    "df1 = pd.read_csv('2024_may27_orders.csv')\n",
     "df1['title'] = df1['title'].str.lstrip()\n",
     "df1['title'] = df1['title'].str.rstrip()\n",
     "df1.shape"
@@ -277,16 +277,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "((58089, 22), (2871, 22), 2871)"
+       "((58681, 22), (3018, 22), 3018)"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -299,7 +299,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -308,7 +308,7 @@
        "59185"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -319,7 +319,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -328,7 +328,7 @@
      "text": [
       "<>:9: SyntaxWarning: invalid escape sequence '\\('\n",
       "<>:9: SyntaxWarning: invalid escape sequence '\\('\n",
-      "C:\\Users\\retai\\AppData\\Local\\Temp\\ipykernel_7720\\526015662.py:9: SyntaxWarning: invalid escape sequence '\\('\n",
+      "C:\\Users\\retai\\AppData\\Local\\Temp\\ipykernel_7376\\526015662.py:9: SyntaxWarning: invalid escape sequence '\\('\n",
       "  temp_stock_df = temp_df['title'].str.split('\\(|\\)', expand=True).iloc[:,[0,1]]\n"
      ]
     }
@@ -352,7 +352,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -361,16 +361,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(2871, 22)"
+       "(3018, 22)"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -384,16 +384,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(60960, 22)"
+       "(61699, 22)"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -406,7 +406,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -419,14 +419,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1366\n"
+      "1428\n"
      ]
     }
    ],
@@ -436,11 +436,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df1.to_csv('2024_apr30_orders fixed_categories.csv', index=False)"
+    "df1.to_csv('2024_may27_orders fixed_categories.csv', index=False)"
    ]
   },
   {
