--- a/size_analysis.ipynb
+++ b/size_analysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,22 +11,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\retai\\AppData\\Local\\Temp\\ipykernel_23124\\2688595086.py:1: DtypeWarning: Columns (1,21) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "C:\\Users\\retai\\AppData\\Local\\Temp\\ipykernel_19668\\2374103367.py:1: DtypeWarning: Columns (1,21) have mixed types. Specify dtype option on import or set low_memory=False.\n",
       "  df = pd.read_csv(\"All orders - short custom description.csv\")\n"
      ]
     }
    ],
    "source": [
     "df = pd.read_csv(\"All orders - short custom description.csv\")\n",
-    "df = df[(df['date'] >= '2022-01-01') & (df['date'] <= '2023-12-31')]\n",
-    "df = df[(df['order_state'] == 'Order Dispatched') | (df['order_state'] == 'Order Refunded')]\n",
+    "df = df[(df['date'] >= '2021-01-01') & (df['date'] <= '2023-12-31')]\n",
+    "# df = df[(df['order_state'] == 'Order Dispatched') | (df['order_state'] == 'Order Refunded')]\n",
+    "df = df[(df['order_state'] == 'Order Dispatched')]\n",
     "df = df[df['attribute_summary'] != 'Size: ladies']\n",
     "df = df[df['attribute_summary'] != 'Size: One Size']\n",
     "df = df[df['Channel'] == 'Leather Company']\n",
@@ -43,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -89,6 +90,99 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Ladies Leather Jackets\n",
+    "\n",
+    "ladies_regular_fit = ['Ashwood Leather Jacket Black: Aliona',\n",
+    "               'Ashwood Leather Jacket Tan: Aliona',\n",
+    "               'Ashwood Leather Jacket Grey: Aliona',\n",
+    "               'Ashwood Leather Jacket Navy: Aliona',\n",
+    "               'Ashwood Leather Jacket Red: Aliona',\n",
+    "               'Ashwood Leather Jacket Taupe: Aliona',\n",
+    "               'Ashwood Leather Jacket Burgandy: Aliona',\n",
+    "               'Ladies Leather Jacket Ivory: Serefina',\n",
+    "               'Ladies Leather Jacket Red : Serefina',\n",
+    "               'Ladies Leather Jacket Navy : Serefina',\n",
+    "               'Ladies Leather Jacket Black : Serefina',\n",
+    "               'Kore Black Leather Jacket',\n",
+    "               'Leather Jacket Tan : Kore',\n",
+    "               'Leather Jacket Red : Kore',\n",
+    "               'Leather Jacket Blue : Kore',\n",
+    "               'Leather Biker Jacket Black :  Scarlett',\n",
+    "               'Leather Biker Jacket Red :  Scarlett',\n",
+    "               'Leather Biker Jacket Cognac :  Scarlett',\n",
+    "               'Ladies Leather Biker Jacket Navy: G-Celia22',\n",
+    "               'Ladies Leather Biker Jacket Burgundy: G-Celia22',\n",
+    "               'Ladies Leather Biker Jacket Black: G-Celia22',\n",
+    "               'Ladies Leather Biker Jacket Beige: G-Celia22',\n",
+    "               'Ladies Leather Biker Jacket Tan: G-Celia22',\n",
+    "               'Ladies Leather Biker Jacket Red: G-Celia22',\n",
+    "               'Leather Jacket Black/app : Marabelle',\n",
+    "               'Leather Jacket Cognac/nap : Marabelle',\n",
+    "               'Leather Jacket Navy/nap : Marabelle',\n",
+    "               'Leather Jacket Mid Brown/nap : Marabelle',\n",
+    "               'Leather Biker Jacket Cream: Casey',\n",
+    "               'Leather Biker Jacket Tan : Casey',\n",
+    "               'Leather Biker Jacket Black : Casey',\n",
+    "               'Leather Biker Jacket Purple : Casey',\n",
+    "               'Leather Biker Jacket Oxblood : Casey',\n",
+    "               'Leather Biker Jacket Royal Blue : Casey',\n",
+    "               'Leather Biker Jacket Black/nap: Soho',\n",
+    "               'Leather Biker Jacket Black: Sheena',\n",
+    "               ]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(571, 22)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "Size\n",
+       "10    3\n",
+       "12    5\n",
+       "14    5\n",
+       "16    4\n",
+       "18    3\n",
+       "20    2\n",
+       "22    1\n",
+       "24    1\n",
+       "8     1\n",
+       "Name: %, dtype: int32"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# df[df['customs_description'] == 'Mens > Leather Jackets']['attribute_summary'].value_counts()\n",
+    "temp_men_regular_fit = df[df['title'].isin(ladies_regular_fit)]\n",
+    "print(temp_men_regular_fit.shape)\n",
+    "temp_men = temp_men_regular_fit[temp_men_regular_fit['customs_description'] == 'Ladies > Leather Jackets']['Size'].value_counts().to_frame('count').join(temp_men_regular_fit[temp_men_regular_fit['customs_description'] == 'Ladies > Leather Jackets']['Size'].value_counts(normalize=True).to_frame('%'))\n",
+    "temp_men['%'] = 100 * temp_men['%']\n",
+    "temp_men['%'] = temp_men['%'] / 4\n",
+    "temp_men['%'] = temp_men['%'].round(0)\n",
+    "temp_men['%'] = temp_men['%'].astype(int)\n",
+    "temp_men = temp_men.sort_values(by='Size')\n",
+    "temp_men['%']"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
@@ -96,7 +190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -120,7 +214,7 @@
        "Name: %, dtype: int32"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -138,34 +232,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(676, 22)\n"
+      "(740, 22)\n"
      ]
     },
     {
      "data": {
       "text/plain": [
        "Size\n",
-       "2XL    4\n",
+       "2XL    3\n",
        "3XL    2\n",
        "4XL    2\n",
        "5XL    0\n",
        "6XL    0\n",
        "L      5\n",
-       "M      4\n",
+       "M      5\n",
        "S      3\n",
        "XL     4\n",
        "XS     1\n",
        "Name: %, dtype: int32"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -185,14 +279,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(1353, 22)\n"
+      "(1713, 22)\n"
      ]
     },
     {
@@ -206,7 +300,7 @@
        "6XL    1\n",
        "7XL    0\n",
        "8XL    0\n",
-       "L      6\n",
+       "L      5\n",
        "M      5\n",
        "S      2\n",
        "XL     4\n",
@@ -214,7 +308,7 @@
        "Name: %, dtype: int32"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -234,9 +328,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(11, 2)\n"
+     ]
+    },
     {
      "data": {
       "text/plain": [
@@ -244,18 +345,18 @@
        "14    5\n",
        "12    5\n",
        "16    4\n",
-       "10    3\n",
+       "10    4\n",
        "18    3\n",
        "20    2\n",
        "8     1\n",
        "22    1\n",
-       "24    1\n",
-       "6     0\n",
+       "24    0\n",
        "26    0\n",
+       "6     0\n",
        "Name: %, dtype: int32"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -263,6 +364,7 @@
    "source": [
     "# df[df['customs_description'] == 'Ladies > Leather Jackets']['attribute_summary'].value_counts()\n",
     "temp_ladies = df[df['customs_description'] == 'Ladies > Leather Jackets']['Size'].value_counts().to_frame('count').join(df[df['customs_description'] == 'Ladies > Leather Jackets']['Size'].value_counts(normalize=True).to_frame('%'))\n",
+    "print(temp_ladies.shape)\n",
     "temp_ladies['%'] = 100 * temp_ladies['%']\n",
     "temp_ladies['%'] = temp_ladies['%'] / 4\n",
     "temp_ladies['%'] = temp_ladies['%'].round(0)\n",
@@ -1125,6 +1227,17 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "df = pd.DataFrame({'F'})"
+   ]
   }
  ],
  "metadata": {
